Colab을 통해 생성됨

--- a/4_3_tryExceptElse_Statement.ipynb
+++ b/4_3_tryExceptElse_Statement.ipynb
@@ -49,13 +49,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "XKm8hYRNqJE2",
-        "outputId": "76fc2f84-6ffb-402b-8743-f74b1bec69ab"
+        "outputId": "42021ddf-21ab-4e53-bb1d-ceec85ce2251"
       },
       "outputs": [
         {
@@ -95,7 +95,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -150,7 +150,7 @@
       ],
       "metadata": {
         "id": "akkFFaUdx-2l",
-        "outputId": "8042bf18-dbfe-413b-9de2-7e2ab686d798",
+        "outputId": "23cdc600-84ae-4567-c9ee-4f239331b877",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -222,7 +222,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -290,7 +290,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -348,16 +348,16 @@
         "  print('Exception occurred')\n",
         "\n",
         "finally:\n",
-        "  print('This code shoule berunning')"
+        "  print('This code should be running')"
       ],
       "metadata": {
         "id": "JPjAho3CyeQF",
-        "outputId": "76534b2b-7ca1-41cb-ff80-7aba8ba60988",
+        "outputId": "f5eb8214-74d5-41a7-9c6e-ca079b86419c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -365,7 +365,7 @@
           "text": [
             "How are you?\n",
             "Exception occurred\n",
-            "This code shoule berunning\n"
+            "This code should be running\n"
           ]
         }
       ]
@@ -424,7 +424,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
