--- a/6_definingfunctions.ipynb
+++ b/6_definingfunctions.ipynb
@@ -55,7 +55,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,7 +184,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -568,6 +568,47 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
+        "name = \"Alice\"\n",
+        "score = 95\n",
+        "age = 18\n",
+        "\n",
+        "test_result = \"You scored %d on the test.\" %score\n",
+        "print(test_result)\n",
+        "\n",
+        "greeting = \"Hello, %s! You turn to finally %d years old finally.\" %(name, age)\n",
+        "print(greeting)\n",
+        "print('\\n')\n",
+        "\n",
+        "print(\"You scored %d on the test.\" %score)\n",
+        "print(\"Hello, %s! You turn to finally %d years old finally.\" %(name, age))"
+      ],
+      "metadata": {
+        "id": "4MlnhceEQqu1",
+        "outputId": "d59083c4-f8ac-4602-9b11-324effdbf471",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "You scored 95 on the test.\n",
+            "Hello, Alice! You turn to finally 18 years old finally.\n",
+            "\n",
+            "\n",
+            "You scored 95 on the test.\n",
+            "Hello, Alice! You turn to finally 18 years old finally.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#3b\n",
         "\n",
         "def add(a, b):\n",
@@ -605,6 +646,39 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
+        "def add(a, b):\n",
+        "    result = a + b\n",
+        "    return result\n",
+        "\n",
+        "num1 = 5\n",
+        "num2 = 3\n",
+        "\n",
+        "sum_result = add(num1, num2)\n",
+        "\n",
+        "print(\"The sum of %d and %d is %d\" % (num1, num2, sum_result))"
+      ],
+      "metadata": {
+        "id": "X8DR76l-SUBp",
+        "outputId": "b656d1e7-b9e2-445c-b276-985e350109de",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The sum of 5 and 3 is 8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#3b'\n",
         "\n",
         "def add_and_print(a, b):\n",
@@ -623,6 +697,35 @@
         }
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The sum of 3 and 4 is 7\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def add_and_print(a, b):\n",
+        "    result = a + b\n",
+        "    print(\"The sum of %d and %d is %d\" %(a, b, result))\n",
+        "    return result\n",
+        "\n",
+        "# Call the function 'add_and_print(a,b)'\n",
+        "sum_result = add_and_print(3, 4)"
+      ],
+      "metadata": {
+        "id": "BELz1Sx9TYfP",
+        "outputId": "bb66881e-a3ac-4e10-9bb8-f8e5b9109812",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -722,6 +825,38 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "def func_uncertain(*args):\n",
+        "  print(args)\n",
+        "\n",
+        "func_uncertain()\n",
+        "func_uncertain(1, 2, 3)\n",
+        "func_uncertain('apple', 'banana', 'cherry', 'date')\n",
+        "func_uncertain(True)"
+      ],
+      "metadata": {
+        "id": "wezMTrAgV1xP",
+        "outputId": "83c03361-cd8d-4499-d761-c7d517d641f1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "()\n",
+            "(1, 2, 3)\n",
+            "('apple', 'banana', 'cherry', 'date')\n",
+            "(True,)\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "##💡 'True' is a boolean value in Python, representing the logical value of true.\n",
@@ -761,6 +896,34 @@
         }
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{}\n",
+            "{'depth': 30, 'color': 'blue'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def func_kwa(width, height, **kwargs):\n",
+        "  print(kwargs)\n",
+        "\n",
+        "func_kwa(10, 20)\n",
+        "func_kwa(10, 20, depth=30, color='blue')"
+      ],
+      "metadata": {
+        "id": "Px7XAis0YdaY",
+        "outputId": "bfd1536c-b5d4-45ff-e002-56b4828deba3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -819,6 +982,36 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "def func_kwa(width, height, **kwargs):\n",
+        "    print(\"Width:\", width)\n",
+        "    print(\"Height:\", height)\n",
+        "    print(\"Additional keyword arguments:\", kwargs)\n",
+        "\n",
+        "func_kwa(10, 20, depth=30, color='blue')\n"
+      ],
+      "metadata": {
+        "id": "V8nv_NyyYqJb",
+        "outputId": "64351de5-f6eb-492a-b83c-5388f84f8718",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Width: 10\n",
+            "Height: 20\n",
+            "Additional keyword arguments: {'depth': 30, 'color': 'blue'}\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "#####  🌀 리스트의 요소 중 하나가 function 함수인 경우"
@@ -847,6 +1040,36 @@
         }
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello World!\n",
+            "Hello World!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def myfunction():\n",
+        "  print ('Hello World!')\n",
+        "\n",
+        "list = [1, 2, myfunction]\n",
+        "\n",
+        "myfunction()\n",
+        "list[2]()"
+      ],
+      "metadata": {
+        "id": "99XbverdZ43F",
+        "outputId": "65e7c8ea-c495-4c50-d2f6-8166c4e968e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
