Colab을 통해 생성됨

--- a/7_class_method_member_object.ipynb
+++ b/7_class_method_member_object.ipynb
@@ -293,6 +293,24 @@
     {
       "cell_type": "code",
       "source": [
+        "class FourCal:\n",
+        "  def setdata(self, first, second):\n",
+        "    self.first = first\n",
+        "    self.second = second\n",
+        "\n",
+        "  def add(self):\n",
+        "    result = self.first + self.second\n",
+        "    return result"
+      ],
+      "metadata": {
+        "id": "e9qkywmX_Wfd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#객체 a, 객체변수 first, 객체변수 second 할당, add 연산\n",
         "\n",
         "a = FourCal()\n",
@@ -317,6 +335,34 @@
           },
           "metadata": {},
           "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = FourCal()\n",
+        "a.setdata(10,20)\n",
+        "a.add()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4Hp5HZgj_frB",
+        "outputId": "31bf7a7c-e3a8-43b5-8c42-8887371653ee"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "30"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
         }
       ]
     },
@@ -356,6 +402,44 @@
       ],
       "metadata": {
         "id": "HKOc8pCMmja1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class FourCal:\n",
+        "  def setdata(self, first, second):\n",
+        "    self.first = first\n",
+        "    self.second = second\n",
+        "\n",
+        "  def add(self):\n",
+        "    result = self.first + self.second\n",
+        "    return result\n",
+        "\n",
+        "  def sub(self):\n",
+        "    result = self.first - self.second\n",
+        "    return result\n",
+        "\n",
+        "  def mul(self):\n",
+        "    result = self.first * self.second\n",
+        "    return result\n",
+        "\n",
+        "  def div(self):\n",
+        "    result = self.first / self.second\n",
+        "    return result\n",
+        "\n",
+        "a = FourCal()\n",
+        "b = FourCal()\n",
+        "c = FourCal()\n",
+        "\n",
+        "a.setdata(10,20)\n",
+        "b.setdata(300,400)\n",
+        "c.setdata(123,456)"
+      ],
+      "metadata": {
+        "id": "j75BGCrBBgTq"
       },
       "execution_count": null,
       "outputs": []
