Colab을 통해 생성됨

--- a/7_class_method_member_object.ipynb
+++ b/7_class_method_member_object.ipynb
@@ -454,7 +454,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pKv_KRazn3DV",
-        "outputId": "b2407386-106d-47b5-90b8-c373dca8fbcf"
+        "outputId": "b52758cd-819a-44d1-9fdf-1de74a88827e"
       },
       "execution_count": null,
       "outputs": [
@@ -466,7 +466,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 9
         }
       ]
     },
@@ -480,7 +480,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "weDgKtFYqBIP",
-        "outputId": "f3eacd2d-3500-4f62-8806-5a6439019e13"
+        "outputId": "44cc0b31-b4d1-4d66-8f06-a73fdfcf8513"
       },
       "execution_count": null,
       "outputs": [
@@ -492,7 +492,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 10
         }
       ]
     },
@@ -506,7 +506,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "p9ePA6o-qWcO",
-        "outputId": "134ec915-82ae-422b-bb38-b79034ac7b3b"
+        "outputId": "56004654-b489-45b9-cc0e-a4e4c3005ed7"
       },
       "execution_count": null,
       "outputs": [
@@ -518,7 +518,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 11
         }
       ]
     },
@@ -532,7 +532,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RAMY75MgqYqF",
-        "outputId": "e56035f3-af49-4f85-ad87-72bbd498e868"
+        "outputId": "5a68095e-02bc-4a3b-bf0d-4266aab80756"
       },
       "execution_count": null,
       "outputs": [
@@ -544,7 +544,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 12
         }
       ]
     },
@@ -558,7 +558,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Opn0xvELqu08",
-        "outputId": "4d5d8ed2-dd6d-419d-a9a2-d83c50935c51"
+        "outputId": "473eea25-70e9-48d9-fc11-3747d4893335"
       },
       "execution_count": null,
       "outputs": [
@@ -570,7 +570,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 13
         }
       ]
     },
@@ -584,7 +584,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EY5OOc86qxWE",
-        "outputId": "2a3101b0-c817-4d23-c579-a75b761a8e64"
+        "outputId": "fc3217e6-684a-408d-d231-3088ba999698"
       },
       "execution_count": null,
       "outputs": [
@@ -596,7 +596,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 14
         }
       ]
     },
@@ -610,7 +610,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oWwt0GrIqzdS",
-        "outputId": "497c6b4d-0874-491e-e876-4a0d5cf88649"
+        "outputId": "95978080-e85c-4d33-c504-0aaac714c69e"
       },
       "execution_count": null,
       "outputs": [
@@ -622,7 +622,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 15
         }
       ]
     },
@@ -636,7 +636,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M1us7M4wq1lC",
-        "outputId": "f189d9e4-d977-41ea-ec4a-d91b87540581"
+        "outputId": "ace0c71c-89c6-4535-924b-5f78041a2985"
       },
       "execution_count": null,
       "outputs": [
@@ -648,7 +648,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 16
         }
       ]
     },
@@ -659,7 +659,7 @@
       ],
       "metadata": {
         "id": "4NolxlMEowyk",
-        "outputId": "a12fd0b1-525f-44f9-c717-56c3e7d0e886",
+        "outputId": "c14f53d8-2e4e-4440-d880-6a5cd3f42459",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -674,20 +674,21 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 17
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "# 반올림\n",
         "c_result = c.div()\n",
         "round_result = round(c_result,2)\n",
         "print(round_result)"
       ],
       "metadata": {
         "id": "5QQxUhfMo5TC",
-        "outputId": "1864274c-ad15-486a-ebe0-7560e1e65a9a",
+        "outputId": "bab9fc44-4c8a-476c-e298-a3f1fb611cef",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -737,6 +738,26 @@
     {
       "cell_type": "code",
       "source": [
+        "class MoreFourCal:\n",
+        "  def setdata (self, first, second):\n",
+        "    self.first = first\n",
+        "    self.second = second\n",
+        "\n",
+        "  def pow(self):\n",
+        "    result = self.first ** self.second\n",
+        "    return result\n",
+        "\n",
+        "a = MoreFourCal()"
+      ],
+      "metadata": {
+        "id": "6JPImGe4FRul"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "a.setdata(10,2)\n",
         "a.pow()"
       ],
@@ -745,7 +766,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qx_XpWvEtOG8",
-        "outputId": "45fa7db6-baef-4b35-8482-7005d4b8aff9"
+        "outputId": "db3923d6-a6d4-4b01-9c4e-e37ae433e4c3"
       },
       "execution_count": null,
       "outputs": [
@@ -757,7 +778,34 @@
             ]
           },
           "metadata": {},
-          "execution_count": 52
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a.setdata(10,4)\n",
+        "a.pow()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Yn8lRUh6FTg-",
+        "outputId": "7e25d2b3-3f2d-4b2c-cce6-36210acdd64e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10000"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
         }
       ]
     },
@@ -769,7 +817,7 @@
       ],
       "metadata": {
         "id": "apt7h2iPqeaZ",
-        "outputId": "9ff00d3e-c24d-43e1-ae08-e2cf10fdfbe7",
+        "outputId": "036a5309-38c5-4dc2-869a-385aeab1d2dd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -784,7 +832,34 @@
             ]
           },
           "metadata": {},
-          "execution_count": 53
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a.setdata(10,20)\n",
+        "a.pow()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "n6L3EupEFVyD",
+        "outputId": "3c96e658-f5c4-4cf8-bd3a-f6bb7f9f1758"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "100000000000000000000"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
         }
       ]
     },
@@ -817,15 +892,30 @@
     {
       "cell_type": "code",
       "source": [
-        "a.lastname #클래스변수는 클래스이름.클래스변수로 사용\n"
+        "class Family:\n",
+        "  lastname = 'Chandler'\n",
+        "\n",
+        "a = Family()\n",
+        "b = Family()"
+      ],
+      "metadata": {
+        "id": "uOhbKgNqGVD0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a.lastname"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "id": "M1OyGq11wamS",
-        "outputId": "673802b5-0651-4af2-d37b-8f6baa842560"
+        "id": "hoxWiYZ9GZhm",
+        "outputId": "6808eeb9-f789-41e6-8859-11c8dcfad204"
       },
       "execution_count": null,
       "outputs": [
@@ -840,7 +930,37 @@
             }
           },
           "metadata": {},
-          "execution_count": 56
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a.lastname #클래스변수는 클래스이름.클래스변수로 사용\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "M1OyGq11wamS",
+        "outputId": "821726dc-a2bb-48e4-96e5-4b0ac7395373"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Chandler'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 27
         }
       ]
     },
@@ -855,7 +975,7 @@
           "height": 35
         },
         "id": "nAjFJCDhzeFr",
-        "outputId": "dda3079e-5f36-4e77-889c-cf36b2b68caa"
+        "outputId": "76774999-76f4-4629-f4c4-2d88a2f7c18b"
       },
       "execution_count": null,
       "outputs": [
@@ -870,7 +990,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 57
+          "execution_count": 28
         }
       ]
     },
@@ -991,6 +1111,40 @@
     {
       "cell_type": "code",
       "source": [
+        "class Greetings:\n",
+        "  def sayHello(self):\n",
+        "    print('How are you?')\n",
+        "\n",
+        "  def sayBye(self,name):\n",
+        "    print('%s, see you!'%name)\n",
+        "\n",
+        "obj = Greetings()\n",
+        "\n",
+        "obj.sayHello()\n",
+        "obj.sayBye('Jae Hyeong')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ugZOp8S_HDAe",
+        "outputId": "f623d68c-2243-44ce-bdc3-941dd137cd5e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "How are you?\n",
+            "Jae Hyeong, see you!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#Caculator.py\n",
         "\n",
         "result = 0 #global variable named result and assigns it the value 0\n",
@@ -1010,6 +1164,40 @@
         },
         "id": "veFGBxXx_eQp",
         "outputId": "ef804dd0-48b5-4b1e-abef-9c6fb8ceaa10"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "7\n",
+            "12\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = 0\n",
+        "\n",
+        "def add(num):\n",
+        "  global result\n",
+        "  result += num\n",
+        "  return result\n",
+        "\n",
+        "print(add(3))\n",
+        "print(add(4))\n",
+        "print(add(5))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "09Q4QHWuH75X",
+        "outputId": "c1503fc9-ef1d-49dd-d4d8-d4fcb67b2e00"
       },
       "execution_count": null,
       "outputs": [
@@ -1057,7 +1245,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M-bvTQUzABlR",
-        "outputId": "06c04252-0851-47cf-be1a-8ef0a7bada6f"
+        "outputId": "bbca95d9-047f-4841-c5d5-b3170c07adff"
       },
       "execution_count": null,
       "outputs": [
