--- a/8_readtxtfilesimportingfrom_html.ipynb
+++ b/8_readtxtfilesimportingfrom_html.ipynb
@@ -416,7 +416,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 🐹🍏  <font color = 'red'> **Step-by-Step to get your text file ready for further analysis**</font>\n",
+        "## 🐹🍏  <font color = 'red'> **Step-by-Step to get your text file ready for further analysis as UTF-8 (Unicode Transformation Format)**</font>\n",
         "\n",
         "**On your machine**\n",
         "* **Mac**\n",
@@ -426,9 +426,16 @@
         "\n",
         "      1. Go to [Format] -> [Make Plain Text]</font>\n",
         "      \n",
-        "      2. Hit [Save] -> Choose a directory -> Type in a file name under \"Save as\" -> Check Plain Text Encoding: Unicode (UTF-8) (If no extension is provided, use .txt)\n",
+        "      2. Hit [Save] -> Choose a directory -> Type in a file name under \"Save as\" -> Check Plain Text Encoding: Unicode (UTF-8)\n",
+        "      (If no extension is provided, use .txt)\n",
         "\n",
-        "      3. In the term \"UTF-8,\" the number 8 refers to the number of bits used to encode characters in the UTF-8 character encoding scheme. UTF-8 is a variable-width encoding that can use 8, 16, or 24 bits to represent characters, but the most commonly used range is the 8-bit representation. This means that characters in UTF-8 can be encoded using 1 to 4 bytes, with the most common characters (those in the ASCII character set) represented using a single byte (8 bits). UTF-8은 가변 폭 인코딩으로, 문자를 나타내는 데 8, 16 또는 24비트를 사용할 수 있지만, 가장 일반적으로 사용되는 범위는 8비트 표현입니다. 이는 UTF-8에서 문자를 1바이트에서 4바이트까지 인코딩할 수 있음을 의미하며, 가장 일반적인 문자(ASCII 문자 집합에 속하는 문자)는 1바이트(8비트)로 표현됩니다.\n",
+        "      3. In the term \"UTF-8,\" the number 8 refers to the number of bits used to encode characters in the UTF-8 character\n",
+        "      encoding scheme. UTF-8 is a variable-width encoding that can use 8, 16, or 24 bits to represent characters,\n",
+        "      but the most commonly used range is the 8-bit representation. This means that characters in UTF-8 can be encoded\n",
+        "      using 1 to 4 bytes, with the most common characters (those in the ASCII character set) represented using\n",
+        "      a single byte (8 bits). UTF-8은 가변 폭 인코딩으로, 문자를 나타내는 데 8, 16 또는 24비트를 사용할 수 있지만, 가장 일반적으로\n",
+        "      사용되는 범위는 8비트 표현입니다. 이는 UTF-8에서 문자를 1바이트에서 4바이트까지 인코딩할 수 있음을 의미하며, 가장 일반적인 문자(ASCII 문자 집합에 속하는 문자)는\n",
+        "      1바이트(8비트)로 표현됩니다.\n",
         ">\n",
         "* **MS Word**\n",
         "  * [If you want to copy sentences excerpted from Crime and Punishment by Fyodor Dostovesky, click here!](https://raw.githubusercontent.com/ms624atyale/Data_Misc/main/Crime_Punishment_ChOne_Part.txt)\n",
@@ -436,15 +443,22 @@
         "  \n",
         "        1.Go to [File] -> [Save As...] Choose [File Format] -> [Plain Text(.txt)]\n",
         "        \n",
-        "        2. Hit [Save] -> [Other Encoding] -> Unicode(UTF-8) -> End lines with CR-Only (by default) or CR/LF -> Document direction: [Left-to-right] -> Hit [OK]\n",
-        "        >\n",
+        "        2. Hit [Save] -> [Other Encoding] -> Unicode(UTF-8) -> End lines with CR-Only (by default) or CR/LF\n",
+        "        -> Document direction: [Left-to-right] -> Hit [OK]\n",
+        ">\n",
+        "\n",
         "* **PC**\n",
         "  * [If you want to copy sentences excerpted from Crime and Punishment by Fyodor Dostovesky, click here!](https://raw.githubusercontent.com/ms624atyale/Data_Misc/main/Crime_Punishment_ChOne_Part.txt)\n",
         "  * Copy content from your **ms word** or html and paste it to **WordPad 메모장**.\n",
         "  \n",
         "        1.Go to [File] -> [Save As...] Choose [Text Document]\n",
         "        \n",
-        "        2. Hit [Save] -> Choose a directory -> Type in a file name under \"Save as\" -> Check Plain Text Encoding: Unicode (UTF-8) (If no extension is provided, use .txt)\n",
+        "        2. Hit [Save] -> Choose a directory -> Type in a file name under \"Save as\" -> Check Plain Text Encoding:\n",
+        "        Unicode (UTF-8) (If no extension is provided, use .txt)\n",
+        "\n",
+        "        3. If you are given two options, UTF-8a and UTF-8b, choose UTF-8b (aka, UTF-8 without BOM),\n",
+        "        which is the standard UTF-8. It is a safer choice for maximum compatibility, especially in\n",
+        "        cross-platform applications.\n",
         ">\n",
         "**<font color = 'red'>💣 [Warning]** </font>\n",
         "* Do not select Rich Text Format (RTF), which is the default.\n",
@@ -512,6 +526,22 @@
     {
       "cell_type": "code",
       "source": [
+        "from urllib.request import urlopen\n",
+        "url = 'https://google.com/'\n",
+        "with urlopen(url) as f:\n",
+        "  content = f.read().decode()\n",
+        "  with open('google_html', 'w') as cf:\n",
+        "    cf.write(content)"
+      ],
+      "metadata": {
+        "id": "XwkORAM_avYd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@markdown ### 🐹 <font color = 'red'>**Student Activity 1** ⤵️\n",
         "\n",
         "#@markdown 👀🐾 **1. Simple way to read and save the content of the url of your chice.**\n",
@@ -575,6 +605,43 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "He had successfully avoided meeting his landlady on the stairs. His closet of a room was under the roof of a high, five-floor house and was more like a cupboard than a place in which to live. The landlady who provided him with the room and with dinner and service lived on the floor below, and every time he went out he was obliged to pass her kitchen, the door of which was always open. And each time he passed, the young man had a sick, frightened feeling, which made him grimace and feel ashamed. He was hopelessly in debt to his landlady and was afraid of meeting her.\n",
+            "\n",
+            "This was not because he was cowardly and browbeaten, quite the contrary; but for some time past he had been in an overstrained irritable condition, verging on hypochondria. He had become so completely absorbed in himself and isolated from everyone else that he dreaded meeting not only his landlady, but anyone at all. He was crushed by poverty, but even the anxieties of his position had recently ceased to weigh upon him. He had given up attending to matters of practical importance; he had lost all desire to do so. In fact, nothing that any landlady could do held any terror for him. But to be stopped on the stairs, to be forced to listen to her trivial, irrelevant gossip, to pestering demands for payment, threats and complaints, all the while racking his brains for excuses, avoiding the issue, lying — no, he would rather creep down the stairs like a cat and slip out unseen.\n",
+            "\n",
+            "However, when he emerged onto the street that evening, he became acutely aware of his fears.\n",
+            "\n",
+            "“I want to attempt a thing like that and am frightened by these trifles,” he thought, with an odd smile. “Hm . . . yes, everything is in someone’s hands and they let it all slip out of cowardice, that’s an axiom. It would be interesting to know what it is people are most afraid of. Taking a new step, uttering a new word is what they fear most . . . But I am talking too much. It’s because I babble that I do nothing. Or perhaps it is that I babble because I do nothing. I’ve learned to babble this last month, lying for days on end in my corner thinking . . . just nonsense. Why am I going there now? Am I capable of that? Is that seriously possible? I’m not serious about it at all. It’s just a fantasy to amuse myself; a plaything! Yes, maybe it is a plaything.”\n",
+            "\n",
+            "The heat in the street was terrible: and the airlessness, the bustle, the plaster, the scaffolding, the bricks and the dust all around him, and that special Petersburg stench, so familiar to everyone who is unable to get out of town during the summer — all worked painfully upon the young man’s already overwrought nerves. The unbearable stench from the taverns, which are particularly numerous in that part of the town, and the drunken men whom he met continually, although it was a weekday, completed the revolting misery of the picture. An expression of the deepest disgust gleamed for a moment in the young man’s refined face. He was, by the way, exceptionally handsome, above average in height, slim, well-built, with beautiful dark eyes and dark brown hair. Soon, though, he sank into deep thought, or more accurately speaking into a complete blankness of mind; he walked along not observing what was around him and not caring to observe it. From time to time, because he used to talk to himself, he would mutter something, a habit to which he had just confessed. At these moments he would become conscious that his ideas were sometimes in a tangle and that he was very weak; for two days he had had almost nothing to eat.\n",
+            "\n",
+            "He was so badly dressed that even a man accustomed to shabbiness would have been ashamed to be seen in the street in such rags. In that part of town, however, scarcely any shortcoming in dress would have created surprise. Due to the proximity of the Haymarket, the number of establishments of a certain kind and the overwhelming numbers of craftsmen and workers crowded in these streets and alleys at the center of Petersburg, so many different types of people were to be seen in the streets that no figure, however strange, would have caused surprise. But there was such accumulated spite and contempt in the young man’s heart, that, in spite of all the cares of youth, he minded his rags least of all. It was a different matter when he met with acquaintances or with former fellow students, whom, indeed, he disliked meeting at any time. And yet when a drunken man who, for some unknown reason, was being taken somewhere in a huge cart dragged by a heavy cart-horse, suddenly shouted at him as he drove past, “Hey there, German hatter,” bellowing at the top of his voice and pointing at him — the young man stopped suddenly and clutched trembling at his hat. It was a tall round one from Zimmermann’s, but completely worn out, rusty with age, all torn and bespattered, brimless and bent on one side in a most hideous fashion. Not shame, however, but another feeling akin to terror had overtaken him.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "file=open('/content/exercise/Chrime_punishment','rt')\n",
+        "\n",
+        "txt = file.read()\n",
+        "print(txt)\n",
+        "file.close()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1YDI7-F0fXOQ",
+        "outputId": "0986f539-b827-4a87-ad43-39c098f94ab8"
       },
       "execution_count": null,
       "outputs": [
@@ -669,10 +736,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 157
+          "height": 109
         },
         "id": "5qEQi0fzsyiz",
-        "outputId": "5f0c16d2-dabb-4dbb-81bf-632ae7ce350f"
+        "outputId": "f3167f9f-a9f2-479f-c99d-aabf6641ba47"
       },
       "execution_count": null,
       "outputs": [
@@ -712,10 +779,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 157
+          "height": 109
         },
         "id": "XhALkXH6pxdL",
-        "outputId": "8fa16bb5-e63f-42b2-e807-913a4f281aa7"
+        "outputId": "01143481-ca4f-4795-c042-93dfdc1a562d"
       },
       "execution_count": null,
       "outputs": [
