--- a/8_readtxtfilesimportingfrom_html.ipynb
+++ b/8_readtxtfilesimportingfrom_html.ipynb
@@ -768,13 +768,31 @@
     {
       "cell_type": "code",
       "source": [
-        "! git clone https://github.com/ms624atyale/NLP_2024"
+        "! git clone https://github.com/leejaehyeong1/NLP_2024"
       ],
       "metadata": {
-        "id": "svt8cjJPeIr3"
+        "id": "svt8cjJPeIr3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a2ab4bbc-41d7-48f7-9012-f7479ed999e7"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'NLP_2024'...\n",
+            "remote: Enumerating objects: 141, done.\u001b[K\n",
+            "remote: Counting objects: 100% (141/141), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (137/137), done.\u001b[K\n",
+            "remote: Total 141 (delta 74), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (141/141), 2.01 MiB | 9.53 MiB/s, done.\n",
+            "Resolving deltas: 100% (74/74), done.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
