--- a/10_tokenization_variousways.ipynb
+++ b/10_tokenization_variousways.ipynb
@@ -629,10 +629,60 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "!pip install nltk\n",
+        "import nltk\n",
+        "nltk.download('punkt')\n",
+        "nltk.download('punkt_tab')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lXVvL5hTEo78",
+        "outputId": "5082aca7-b0aa-4943-88df-f9d784ab5018"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: nltk in /usr/local/lib/python3.10/dist-packages (3.9.1)\n",
+            "Requirement already satisfied: click in /usr/local/lib/python3.10/dist-packages (from nltk) (8.1.7)\n",
+            "Requirement already satisfied: joblib in /usr/local/lib/python3.10/dist-packages (from nltk) (1.4.2)\n",
+            "Requirement already satisfied: regex>=2021.8.3 in /usr/local/lib/python3.10/dist-packages (from nltk) (2024.9.11)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from nltk) (4.66.6)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n",
+            "[nltk_data] Downloading package punkt_tab to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping tokenizers/punkt_tab.zip.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "qWcgp3AzSyi4",
-        "outputId": "275b0245-74a1-4e5a-d816-1cd357a2b175",
+        "outputId": "14d2c118-27db-4e83-dd69-a76dc20d6a53",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -642,12 +692,11 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: nltk in /usr/local/lib/python3.10/dist-packages (3.8.1)\n",
-            "Requirement already satisfied: click in /usr/local/lib/python3.10/dist-packages (from nltk) (8.1.3)\n",
-            "Requirement already satisfied: joblib in /usr/local/lib/python3.10/dist-packages (from nltk) (1.2.0)\n",
-            "Requirement already satisfied: regex>=2021.8.3 in /usr/local/lib/python3.10/dist-packages (from nltk) (2022.10.31)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from nltk) (4.65.0)\n"
+            "Requirement already satisfied: nltk in /usr/local/lib/python3.10/dist-packages (3.9.1)\n",
+            "Requirement already satisfied: click in /usr/local/lib/python3.10/dist-packages (from nltk) (8.1.7)\n",
+            "Requirement already satisfied: joblib in /usr/local/lib/python3.10/dist-packages (from nltk) (1.4.2)\n",
+            "Requirement already satisfied: regex>=2021.8.3 in /usr/local/lib/python3.10/dist-packages (from nltk) (2024.9.11)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from nltk) (4.66.6)\n"
           ]
         },
         {
@@ -655,7 +704,9 @@
           "name": "stderr",
           "text": [
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+            "[nltk_data]   Package punkt is already up-to-date!\n",
+            "[nltk_data] Downloading package punkt_tab to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping tokenizers/punkt_tab.zip.\n"
           ]
         },
         {
@@ -674,7 +725,8 @@
         "#@markdown 👀🐾 **Install <font color = 'red'> NLTK</font> package and download  <font color = 'red'> punkt </font> package.**\n",
         "!pip install nltk\n",
         "import nltk\n",
-        "nltk.download('punkt')"
+        "nltk.download('punkt')\n",
+        "nltk.download('punkt_tab') #necessary for sentence tokenization since fall 2024"
       ]
     },
     {
@@ -697,7 +749,7 @@
       ],
       "metadata": {
         "id": "kv8s_PN-OlG_",
-        "outputId": "691299cf-2858-4277-ea59-27f2b64e8718",
+        "outputId": "9bbd7226-3653-47a0-84b3-95353ab0fc4b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -733,7 +785,7 @@
       ],
       "metadata": {
         "id": "4odDoSnPS18k",
-        "outputId": "396ab724-cd82-4e94-e561-56dcb62a92de",
+        "outputId": "90436faa-3618-4f4c-ba98-273c58c8c0cf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -773,12 +825,12 @@
       ],
       "metadata": {
         "id": "afJEPVK-0zZl",
-        "outputId": "3b643bb4-ea0f-4967-a34b-210eed7de4f1",
+        "outputId": "fae8254f-c111-4155-82ae-018e8f5a31d6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -796,7 +848,7 @@
           "name": "stderr",
           "text": [
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+            "[nltk_data]   Package punkt is already up-to-date!\n"
           ]
         },
         {
@@ -807,7 +859,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 6
         }
       ]
     },
@@ -827,12 +879,12 @@
         "#@markdown 🐹 **Student's Activity 1** ⤵️\n",
         "\n",
         "#@markdown 👀🐾 **text Read files using open( ) function.**\n",
-        "text = open('/content/sample_data/Crime_Punishment_Sample (1).txt','rt')"
+        "text = open('/content/sample_data/text_symbol_sample.txt','rt')"
       ],
       "metadata": {
         "id": "S5pahMiG_JLH"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -845,29 +897,24 @@
       ],
       "metadata": {
         "id": "IzJ3YrUeGlgk",
-        "outputId": "21662ab6-c425-4f44-9826-588f15cd75a8",
+        "outputId": "b4c89790-8ff2-486f-c019-84c0c7096a4f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "He had successfully avoided meeting his landlady on the stairs. His closet of a room was under the roof of a high, five-floor house and was more like a cupboard than a place in which to live. The landlady who provided him with the room and with dinner and service lived on the floor below, and every time he went out he was obliged to pass her kitchen, the door of which was always open. And each time he passed, the young man had a sick, frightened feeling, which made him grimace and feel ashamed. He was hopelessly in debt to his landlady and was afraid of meeting her.\n",
-            "\n",
-            "This was not because he was cowardly and browbeaten, quite the contrary; but for some time past he had been in an overstrained irritable condition, verging on hypochondria. He had become so completely absorbed in himself and isolated from everyone else that he dreaded meeting not only his landlady, but anyone at all. He was crushed by poverty, but even the anxieties of his position had recently ceased to weigh upon him. He had given up attending to matters of practical importance; he had lost all desire to do so. In fact, nothing that any landlady could do held any terror for him. But to be stopped on the stairs, to be forced to listen to her trivial, irrelevant gossip, to pestering demands for payment, threats and complaints, all the while racking his brains for excuses, avoiding the issue, lying — no, he would rather creep down the stairs like a cat and slip out unseen.\n",
-            "\n",
-            "However, when he emerged onto the street that evening, he became acutely aware of his fears.\n",
-            "\n",
-            "“I want to attempt a thing like that and am frightened by these trifles,” he thought, with an odd smile. “Hm . . . yes, everything is in someone’s hands and they let it all slip out of cowardice, that’s an axiom. It would be interesting to know what it is people are most afraid of. Taking a new step, uttering a new word is what they fear most . . . But I am talking too much. It’s because I babble that I do nothing. Or perhaps it is that I babble because I do nothing. I’ve learned to babble this last month, lying for days on end in my corner thinking . . . just nonsense. Why am I going there now? Am I capable of that? Is that seriously possible? I’m not serious about it at all. It’s just a fantasy to amuse myself; a plaything! Yes, maybe it is a plaything.”\n",
-            "\n",
-            "The heat in the street was terrible: and the airlessness, the bustle, the plaster, the scaffolding, the bricks and the dust all around him, and that special Petersburg stench, so familiar to everyone who is unable to get out of town during the summer — all worked painfully upon the young man’s already overwrought nerves. The unbearable stench from the taverns, which are particularly numerous in that part of the town, and the drunken men whom he met continually, although it was a weekday, completed the revolting misery of the picture. An expression of the deepest disgust gleamed for a moment in the young man’s refined face. He was, by the way, exceptionally handsome, above average in height, slim, well-built, with beautiful dark eyes and dark brown hair. Soon, though, he sank into deep thought, or more accurately speaking into a complete blankness of mind; he walked along not observing what was around him and not caring to observe it. From time to time, because he used to talk to himself, he would mutter something, a habit to which he had just confessed. At these moments he would become conscious that his ideas were sometimes in a tangle and that he was very weak; for two days he had had almost nothing to eat.\n",
-            "\n",
-            "He was so badly dressed that even a man accustomed to shabbiness would have been ashamed to be seen in the street in such rags. In that part of town, however, scarcely any shortcoming in dress would have created surprise. Due to the proximity of the Haymarket, the number of establishments of a certain kind and the overwhelming numbers of craftsmen and workers crowded in these streets and alleys at the center of Petersburg, so many different types of people were to be seen in the streets that no figure, however strange, would have caused surprise. But there was such accumulated spite and contempt in the young man’s heart, that, in spite of all the cares of youth, he minded his rags least of all. It was a different matter when he met with acquaintances or with former fellow students, whom, indeed, he disliked meeting at any time. And yet when a drunken man who, for some unknown reason, was being taken somewhere in a huge cart dragged by a heavy cart-horse, suddenly shouted at him as he drove past, “Hey there, German hatter,” bellowing at the top of his voice and pointing at him — the young man stopped suddenly and clutched trembling at his hat. It was a tall round one from Zimmermann’s, but completely worn out, rusty with age, all torn and bespattered, brimless and bent on one side in a most hideous fashion. Not shame, however, but another feeling akin to terror had overtaken him.\n",
-            "\n"
+            "Here’s to the crazy ones, the misfits, the rebels, the troublemakers, the round pegs in the square holes.\n",
+            "The ones who see things differently — they’re not fond of rules. \n",
+            "I wanted to pay with a twenti-dolloar bill; \n",
+            "however, she couldn’t get cash. \n",
+            "I’ve got a big trouble, but other people were having lots of fun. \n",
+            "Anna likes Brown’s East back pack,\n",
+            "but her brother doesn’t.\n"
           ]
         }
       ]
